[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-uuid"
version = "0.1.0"
description = "A FastAPI server that generates UUID4 values"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app.py"]
